# CodeFab_Interpreter_A2

./: .gitignore  CLAUDE.md  CodeFab_Interpreter_Guide.md  README.md  assembler.py  ast_nodes.py  checker.py  executor.py  factory_shell.py  parser.py  prompt_shell.py  pyproject.toml  temp_implement.py  test_assembler.py  test_checker.py  test_executor.py  test_parser.py  test_tokenizer.py  token_test.py  tokenizer.py  tokens.py
.github/: pull_request_template.md
interpreter/: assembler.py  ast_nodes.py  checker.py  codefab.py  debugger.py  environment.py  errors.py  executor.py  loader.py  parser.py  runtime.py  tokenizer.py  tokens.py
presentation/: CONTENTS.md  index.html  script.js  styles.css
scripts/: debug_function_calls.txt  debug_import_demo_main.txt  debug_import_demo_module.txt  debug_next_for.txt  error_array_out_of_bounds.txt  error_circular_import.txt  error_circular_import_a.txt  error_class_self_inheritance.txt  error_class_var_name_duplicate.txt  error_duplicate_import.txt  error_function_arity_mismatch.txt  error_missing_import_error.txt  presentation_demo.txt  sum.txt
tests/: conftest.py  helpers.py  test_assembler.py  test_checker.py  test_codefab.py  test_debugger.py  test_environment.py  test_executor.py  test_executor_function.py  test_executor_import.py  test_factory_shell.py  test_loader.py  test_optimization.py  test_parser.py  test_prompt_shell.py  test_runtime.py  test_tokenizer.py  test_tokens.py  test_visitor.py
