[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codefab-interpreter"
version = "0.1.0"
requires-python = ">=3.10"

[project.scripts]
factory = "factory_shell:main"

[tool.setuptools]
py-modules = ["factory_shell", "prompt_shell"]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=interpreter --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["interpreter"]

[tool.coverage.report]
show_missing = true
